# CppMicroServices

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  COPYRIGHT  CodeOfConduct.md  CppMicroServicesConfig.cmake.in  CppMicroServicesConfigVersion.cmake.in  Events.txt  LifeCycle.txt  README.md  README.rst  VERSION  _config.yml  appveyor.yml  biicode.conf  bundleregistryTestconcurrent.txt  cmake-variants.json  codecov.yml  community.md  conanfile.py  conanfile.txt  conf.py  diff.txt  documentation.html  documentation.md  download.md  fixcoveragefilepaths.py  gen_codecov.sh  ignore.bii  index.html  index.md  (+16 more)
compendium/: CMakeLists.txt
compendium/AsyncWorkService/: CMakeLists.txt
compendium/CM/: CMakeLists.txt
compendium/CMInterface/: CMakeLists.txt
compendium/ConfigurationAdmin/: CMakeLists.txt
compendium/DeclarativeServices/: CMakeLists.txt
compendium/EM/: CMakeLists.txt
compendium/EventAdmin/: CMakeLists.txt
compendium/LogService/: CMakeLists.txt
compendium/LogServiceImpl/: CMakeLists.txt
compendium/ServiceComponent/: CMakeLists.txt
compendium/test_bundles/: CMakeLists.txt
compendium/tools/: CMakeLists.txt
core/: CMakeLists.txt  README.md  usCoreConfig.cmake.in  usCoreConfigVersion.cmake.in
core/examples/: CMakeLists.txt
core/include/: CMakeLists.txt  usAny.h  usBundle.h  usBundleActivator.h  usBundleContext.h  usBundleEvent.h  usBundleEventHook.h  usBundleFindHook.h  usBundleImport.h  usBundleInfo.h  usBundleInitialization.h  usBundleResource.h  usBundleResourceStream.h  usBundleSettings.h  usBundleUtils.h  usBundleVersion.h  usChrono.h  usConfig.h  usConstants.h  usCoreConfig.h.in  usFramework.h  usFrameworkEvent.h  usFrameworkFactory.h  usGetBundleContext.h  usGetModuleContext.h  usLDAPFilter.h  usLDAPProp.h  usListenerFunctors.h  usLog.h  usModule.h  usModuleActivator.h  usModuleContext.h  usModuleEvent.h  usModuleEventHook.h  usModuleFindHook.h  usModuleImport.h  usModuleInfo.h  usModuleInitialization.h  usModuleRegistry.h  usModuleResource.h  (+24 more)
core/resources/: manifest.json.in
core/src/: CMakeLists.txt
core/test/: CMakeLists.txt  manifest.json  usAnyTest.cpp  usBiiTestPlaceholder.cpp  usBundleAutoLoadTest.cpp  usBundleEventTest.cpp  usBundleHooksTest.cpp  usBundleManifestTest.cpp  usBundlePropsInterface.h  usBundleRegistryPerformanceTest.cpp  usBundleResourceTest.cpp  usBundleTest.cpp  usConcurrencyTest.cpp  usExecutableBundleTest.cpp  usFrameworkEventTest.cpp  usFrameworkFactoryTest.cpp  usFrameworkListenerTest.cpp  usFrameworkTest.cpp  usHelgrindTest.cpp  usLDAPFilterTest.cpp  usLDAPQueryTest.cpp  usLogTest.cpp  usMemcheckTest.cpp  usModuleAutoLoadTest.cpp  usModuleHooksTest.cpp  usModuleManifestTest.cpp  usModulePropsInterface.h  usModuleResourceTest.cpp  usModuleTest.cpp  usServiceControlInterface.h  usServiceFactoryTest.cpp  usServiceHooksTest.cpp  usServiceListenerTest.cpp  usServiceRegistryPerformanceTest.cpp  usServiceRegistryTest.cpp  usServiceTemplateTest.cpp  usServiceTrackerTest.cpp  usSharedLibraryTest.cpp  usStaticBundleResourceTest.cpp  usStaticBundleTest.cpp  (+14 more)
doc/: CMakeDoxygenFilter.cpp  CMakeLists.txt  doxygen-breathe.conf  doxygen.conf.in  requirements.txt
doc/_templates/: layout.html
doc/doxygen/: footer.html
doc/man/: cppmicroservices-asyncworkservice.3.rst  cppmicroservices-configadmin.3.rst  cppmicroservices-ds.3.rst  cppmicroservices-logservice.3.rst  cppmicroservices-shellservice.7.rst  usResourceCompiler3.1.rst
doc/src/: CMakeLists.txt  build_instructions.rst  getting_started.rst
documentation/: CMakeDoxygenFilter.cpp  CMakeLists.txt  doxygen.conf.in
documentation/doxygen/: MicroServices.dox  MicroServices_AutoLoading.md  MicroServices_Debugging.dox  MicroServices_EmulateSingleton.dox  MicroServices_ModuleProperties.md  MicroServices_Resources.md  MicroServices_ServiceHooks.md  MicroServices_StaticModules.md  MicroServices_TheModuleContext.md  doxygen.css  doxygen_extra.css  footer.html  header.html
documentation/snippets/: CMakeLists.txt
examples/: CMakeLists.txt
examples/dictionaryclient/: Activator.cpp  CMakeLists.txt
examples/dictionaryclient2/: Activator.cpp  CMakeLists.txt
examples/dictionaryclient3/: Activator.cpp  CMakeLists.txt
examples/dictionaryservice/: Activator.cpp  CMakeLists.txt  IDictionaryService.cpp  IDictionaryService.h
examples/driver/: CMakeLists.txt  main.cpp  usCppMicroServicesExampleDriverConfig.h.in
examples/eventlistener/: Activator.cpp  CMakeLists.txt
examples/frenchdictionary/: Activator.cpp  CMakeLists.txt
examples/makefile/: IDictionaryService.cpp  IDictionaryService.h  Makefile  main.cpp  module.cpp
examples/spellcheckclient/: Activator.cpp  CMakeLists.txt
examples/spellcheckservice/: Activator.cpp  CMakeLists.txt  ISpellCheckService.cpp
framework/examples/: CMakeLists.txt
framework/test/: AnyMapTest.cpp  AnyTest.cpp  BundleActivatorTest.cpp  BundleHooksTest.cpp  BundleManifestTest.cpp  BundlePropsInterface.h  BundleRegistryPerformanceTest.cpp  BundleResourceTest.cpp  BundleTest.cpp  CMakeLists.txt  ConcurrencyTest.cpp  FrameworkEventTest.cpp  (+32 more)
httpservice/: CMakeLists.txt
mockmaker/: CMakeLists.txt  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt  manifest.json  usDebugOutputTest.cpp  usLDAPFilterTest.cpp  usModuleAutoLoadTest.cpp  usModuleManifestTest.cpp  usModuleResourceTest.cpp  usModuleTest.cpp  usServiceControlInterface.h  usServiceFactoryTest.cpp  usServiceHooksTest.cpp  usServiceListenerTest.cpp  usServiceRegistryPerformanceTest.cpp  usServiceRegistryTest.cpp  usServiceTemplateTest.cpp  usServiceTrackerTest.cpp  usSharedLibraryTest.cpp  usStaticModuleResourceTest.cpp  usStaticModuleTest.cpp  usTestManager.cpp  usTestManager.h  usTestUtilModuleListener.cpp  usTestUtilModuleListener.h  usTestUtilSharedLibrary.cpp  usTestUtilSharedLibrary.h  usTestingConfig.h.in  usTestingMacros.h
tools/: CMakeLists.txt  miniz.c  usResourceCompiler.c  usResourceCompiler.cpp  usResourceCompressor.c
util/: CMakeLists.txt
(+3399 files in other folders)
